@@ -15,7 +15,7 @@ doubleYScale(obj1, obj2, use.style = TRUE,
              add.axis = TRUE, add.ylab2 = FALSE,
              text = NULL, auto.key = if (!is.null(text))
                list(text, points = points, lines = lines, ...),
-             points = FALSE, lines = TRUE, ...)
+             points = FALSE, lines = TRUE, ..., under = FALSE)
 }
 \arguments{
   \item{obj1, obj2}{
@@ -45,6 +45,9 @@ doubleYScale(obj1, obj2, use.style = TRUE,
     if non-NULL, add a \code{key} to the display, using entries named by
     \code{text}. Further arguments are passed on to
     \code{\link{simpleKey}} at plot time.
+  }
+  \item{under}{
+    if TRUE, draw \code{obj2} under \code{obj1}.
   }
 }
 \details{
